Bug 1630251 - Ignore window move request when not in the normal size mode. r=stransky

This should help.

Differential Revision: https://phabricator.services.mozilla.com/D142672